--- a/home.css
+++ b/home.css
@@ -1,3 +1,14 @@
+body{
+	background-color: rgb(34, 30, 30);
+}
+
+
 h1{
-	color:black;
+	color: cyan;
+	position: absolute;
+
+}
+
+div{
+	position: relative;
 }
