--- a/home.css
+++ b/home.css
@@ -13,9 +13,14 @@ body{
 
 }
 
-.value{
+input[type=text]{
+	width: 20%;
 	display: inline;
-	padding-left: 40%;
+	padding-left: 50%;
+	padding: 12px 20px;
+	margin: 8px 0;
+	margin: 4px 2px;
+	box-sizing: border-box;
 }
 
 
